package no.rmz.blobeeprototest.api.proto;
option optimize_for = SPEED;


message RpcParam {
	 optional string parameter = 1;
}

message RpcResult {
	 required string returnvalue = 1;
}

service RpcService {
  rpc Invoke (RpcParam) returns (RpcResult);
}